added review details in review read data